assets/css/style.css
:root {
    background-color: rgb(51, 25, 7);
    color: rgb(247, 242, 228);
    font-family: Cambria, Cochin, Georgia, Times,'Times New Roman', serif;
    line-height: 1.5;
    font-size: 18px;
}

/* set all elements to use box-sizing */
*, *:before, *:after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
/* Add some flexbox config */
.horizontal {
    display: flex;
    flex-direction: row;
    justify-content: space-between
}

.vertical {
    display: flex;
    flex-direction: column
}

.center {
    justify-content: center;
    align-items: center
}

.flex {
    flex: 1;
}

body {
    background-color: #691E06;
}

h1 {
    font-size: 3rem;
    text-align: center;
}

p {
    font-size: 1.25rem;
    line-height: 1.5em;
}

main {
    padding-bottom: 3rem;
}

.flexContainer {
    display: flex;
    height: auto;
    width: 95%;
    margin: 5px auto;
    font-family: Cambria,
        Cochin,
        Georgia,
        Times,
        'Times New Roman',
        serif;
}

.introTextBlock {
    display: flex;
    flex-direction: column;
    height: auto;
    margin: 1% auto;
    padding-top: 5%;
    padding-bottom: 5%;
    font-family: Cambria,
        Cochin,
        Georgia,
        Times,
        'Times New Roman',
        serif;
    max-width: 60%;
    text-align: center;
    background-color: #691E06;
    color: #F7F2E4;
}

.introTextBlock > a > img {
    height: 100px;
}

.navbar-brand {
    color: rgb(244, 239, 223) !important;
}

.nav-link {
    color: #FBBA72;
}

.nav-link:hover {
    color: rgb(197, 108, 6);
}

.navbar-nav {
	font-family: Cambria, Cochin, Georgia, Times,'Times New Roman', serif;
    line-height: 1.5;
    font-size: 1rem;
}


.page-footer {
    color: #FBBA72;
}

.page-footer a {
    color: rgb(182, 103, 13);
}

/* Main Viewer */
.mainViewer { 
  background-color: #331907;
}

/* Zoom buttons */
.zoomButtons {
    display: flex;
    justify-content: center;
    margin-top: 1rem;
}

#zoomIn,
#zoomOut {
    background-color: #BB4D00;
    width: 8rem;
    padding: 0.25rem;
    margin-left: 2rem;
    margin-right: 2rem;
    font-size: 1rem;
    font-weight: 600;
    color: rgb(247, 242, 228);
    border-radius: 5px;
}

/* Move left and move right buttons */
.left-btn,
.right-btn {
    width: 4rem;
    border: 2px, solid, #FBBA72;
    background-color: #BB4D00;
    background-image: url("../images/angle-right-solid.svg");
    background-repeat: no-repeat;
    background-position: right;
}

.left-btn {
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    background-image: url("../images/angle-left-solid.svg");
    background-repeat: no-repeat;
    background-position: left;
}

.right-btn {
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
}

/* Visualisation */
#visualization {
    width: 95%;
    background-image: url("../images/parchment.jpg");
    background-origin: border-box;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    font-weight: bold;
}

.vis-item {
    color: #691E06;
    border-color: #8F250C;
}

.vis-item-content {
    border-color: #acacac;
    background-color: #FBBA72;
    box-shadow: 5px 5px 10px rgba(128, 128, 128, 0.3);
    border-radius: 5px;
}

/* Styling the range slider with compatibilty for all major browsers  (with help from css-tricks.com) */
.timelineSlider {
    text-align: center;
}

/* Apply base styling to override default appearance */
input[type=range] {
    -webkit-appearance: none;
    margin: 18px 0;
    width: 95%;
}

input[type=range]:focus {
    outline: none;
}

/* Style the Track and Thumb for each browser */
input[type=range]::-webkit-slider-runnable-track {
    width: 100%;
    height: 8.4px;
    cursor: pointer;
    animation-timing-function: 0.2s;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    background: #BB4D00;
    border-radius: 1.3px;
    border: 0.2px solid #010101;
}

input[type=range]::-webkit-slider-thumb {
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    border: 1px solid #000000;
    height: 36px;
    width: 16px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
    -webkit-appearance: none;
    margin-top: -14px;
}

input[type=range]:focus::-webkit-slider-runnable-track {
    background: #BB4D00;
}

input[type=range]::-moz-range-track {
    width: 100%;
    height: 8.4px;
    cursor: pointer;
    /* animation-timing-function: 0.2s; */
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    background: #BB4D00;
    border-radius: 1.3px;
    border: 0.2px solid #010101;
}

input[type=range]::-moz-range-thumb {
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    border: 1px solid #000000;
    height: 36px;
    width: 16px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
}

input[type=range]::-ms-track {
    width: 100%;
    height: 8.4px;
    cursor: pointer;
    /* animation-timing-function: 0.2s; */
    background: transparent;
    border-color: transparent;
    border-width: 16px 0;
    color: transparent;
}

input[type=range]::-ms-fill-lower {
    background: #8F250C;
    border: 0.2px solid #010101;
    border-radius: 2.6px;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}

input[type=range]::-ms-fill-upper {
    background: #BB4D00;
    border: 0.2px solid #010101;
    border-radius: 2.6px;
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}

input[type=range]::-ms-thumb {
    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
    border: 1px solid #000000;
    height: 36px;
    width: 16px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
}

input[type=range]:focus::-ms-fill-lower {
    background: rgb(197, 51, 18);
}

input[type=range]:focus::-ms-fill-upper {
    background: rgb(226, 99, 8);
}

/* cards */
.card {
    background-color: rgb(219, 202, 167);
        font-family: Cambria,
        Cochin,
        Georgia,
        Times,
        'Times New Roman',
        serif;
}

.card-columns {
    columns: 2;
    column-gap: 0.5 rem;
    background-color: rgb(247, 242, 229);
    border: hidden;
    border-radius: 10px;

}

.card-title {
    font-size: 2rem; 
    font-weight: bold;
}

.card-body {
    display: inline-block;
    margin-left: 0px;
    justify-content: right;
    background-color: rgb(242, 168, 94);
    /* border-radius: 10px; */
    border: hidden;
}

#descriptionBlock {
    background-color: rgb(247, 242, 229);
}

#viewerDate {
    font-size: 1.1rem;
    font-weight: bold;
    margin-bottom: 5px;
}

.desc-text {
    font-size: 1.1rem;
    padding-bottom: 0.5rem;
    margin-right: 3rem;
}

.link-button {
    font-size: 1rem;
    color: rgb(38, 19, 9);
}

#itemImage {
    /* padding-top: 0px !important;
    background-color: rgb(105, 30, 6); */
    border: hidden;
}

#itemImage > img {
    border-radius: 10px;
}

#viewWindow {
    border: 1px solid rgb(219, 202, 167);
}


/* Add scrollbar for item viewer description card */

.scroll {
    max-height: 75%;
    overflow-y: auto;
}

/* Collaborate form */
#formContainer {
    border: solid 3px #FBBA72;
    max-width: 560px;
    margin: 160px auto;
    position: relative;
}

form {
    padding: 37.5px;
    margin: 50px 0;
}

#formContainer > h1 {
    color: #FBBA72;
    font-size: 2rem;
    font-weight: 700;
    letter-spacing: 7px;
    text-align: center;
    text-transform: uppercase;
}

#formContainer>h2 {
    color: #FBBA72;
    font-size: 1rem;
    font-weight: 400;
    letter-spacing: 7px;
    text-align: center;
    text-transform: uppercase;
}

.underline {
    border-bottom: solid 2px #FBBA72;
    margin: -0.512em auto;
    width: 550px;
}

.icon_wrapper {
    margin: 50px auto 0;
    width: 100%;
}

.icon {
    display: block;
    fill: #FBBA72;
    height: 50px;
    margin: 0 auto;
    width: 50px;
}

.email {
    float: right;
    width: 45%;
}

input[type='text'],
[type='email'],
select,
textarea {
    background: none;
    border: none;
    border-bottom: solid 2px #FBBA72;
    color: #FBBA72;
    font-size: 1.000em;
    font-weight: 400;
    letter-spacing: 1px;
    margin: 0em 0 1.875em 0;
    padding: 0 0 0.875em 0;
    text-transform: uppercase;
    width: 100%;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    -o-box-sizing: border-box;
    box-sizing: border-box;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -ms-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

input[type='text']:focus,
[type='email']:focus,
textarea:focus {
    outline: none;
    padding: 0 0 0.875em 0;
}

.message {
    float: none;
}

.name {
    float: left;
    width: 45%;
}

select {
    background: url('https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-32.png') no-repeat right;
    outline: none;
    -moz-appearance: none;
    -webkit-appearance: none;
}

select::-ms-expand {
    display: none;
}

.subject {
    width: 100%;
}

.eventTitle {
    width: 100%;
}

textarea {
    line-height: 150%;
    height: 150px;
    resize: none;
    width: 100%;
}

::-webkit-input-placeholder {
    color: #FBBA72;
}

:-moz-placeholder {
    color: #FBBA72;
    opacity: 1;
}

::-moz-placeholder {
    color: #FBBA72;
    opacity: 1;
}

:-ms-input-placeholder {
    color: #FBBA72;
}

#form_button {
    background: none;
    border: solid 2px #FBBA72;
    color: #FBBA72;
    cursor: pointer;
    display: inline-block;
    font-size: 0.875em;
    font-weight: bold;
    outline: none;
    padding: 20px 35px;
    text-transform: uppercase;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -ms-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

#form_button:hover {
    background: #b44006;
    color: #F2F3EB;
}

@media screen and (max-width: 768px) {
    #container {
        margin: 20px auto;
        width: 95%;
    }
}

@media screen and (max-width: 480px) {
    h1 {
        font-size: 26px;
    }

    .underline {
        width: 68px;
    }

    #form_button {
        padding: 15px 25px;
    }
}

@media screen and (max-width: 420px) {
    h1 {
        font-size: 18px;
    }

    .icon {
        height: 35px;
        width: 35px;
    }

    .underline {
        width: 53px;
    }

    input[type='text'],
    [type='email'],
    select,
    textarea {
        font-size: 0.875em;
    }
}

